crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__jsx-2.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"<Foo>{bar}</Foo>\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 16,
                    },
                },
                span: 0..16,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 16,
                            },
                        },
                        span: 0..16,
                        kind: JSXElement(
                            JSXElement {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 16,
                                    },
                                },
                                span: 0..16,
                                name: "Foo",
                                attrs: [],
                                children: [
                                    JSXExprContainer(
                                        JSXExprContainer {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 5,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 10,
                                                },
                                            },
                                            span: 5..10,
                                            expr: Expr {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 6,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 9,
                                                    },
                                                },
                                                span: 6..9,
                                                kind: Ident(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 6,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 9,
                                                            },
                                                        },
                                                        span: 6..9,
                                                        name: "bar",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
